Reboot computer