@@ -2,6 +2,7 @@ package com.ikvashnin.bot.citysearcher;
 
 import lombok.*;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Getter
@@ -13,10 +14,14 @@ import java.util.List;
 public class City {
     String code;
     String name;
+
     Cases cases;
 
     public boolean isCityName(String name) {
-        List<String> names = List.of(this.name, cases.da, cases.pr, cases.ro, cases.su, cases.tv, cases.vi);
+        if (cases == null) {
+            return false;
+        }
+        List<String> names = Arrays.asList(this.name, cases.da, cases.pr, cases.ro, cases.su, cases.tv, cases.vi);
         return names.contains(name);
     }
 }
